# trader

./: .env.example  .gitignore  docker-compose.yml  test.key.pub
backend/: Dockerfile  alembic.ini  celerybeat-schedule  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_economic_and_sec_tables.py  0003_add_analysis_tables.py  0004_add_ml_tables.py  0005_add_decision_engine_tables.py  0006_add_execution_engine_columns.py  0007_add_alerts_table.py  0008_add_autonomous_mode.py  0009_add_discovery_tables.py  0010_rename_autonomous_add_system_paused.py  0011_lower_min_confidence_default.py  0012_convert_rejected_to_queued.py  0013_clean_market_closed_proposals.py  0014_create_system_kv_table.py  0015_add_rl_tables.py  0016_drop_rl_snapshot_tables.py
backend/app/: celery_app.py  config.py  database.py  dynamic_scheduler.py  main.py  schedule_overrides.py
backend/app/analysis/: __init__.py  context_synthesis.py  filings.py  sentiment.py
backend/app/api/: __init__.py  alerts.py  analysis.py  analyst.py  analytics.py  collection.py  data_collection.py  discovery.py  economic.py  ml.py  portfolio.py  risk.py  rl_models.py  status.py  system.py  tasks.py  trades.py  training.py
backend/app/collectors/: __init__.py  alpaca_collector.py  edgar_collector.py  finnhub_collector.py  fred_collector.py
backend/app/engine/: alert_service.py  analytics.py  decision_engine.py  executor.py  portfolio_sync.py  position_sizer.py  (+4 more)
backend/training/: backtest_strategies.py  requirements.txt  train_technical_model.py
(+95 files in other folders)
